--- a/movie/templates/about.html
+++ b/movie/templates/about.html
@@ -1,2 +1,9 @@
-
-<h1>Welcome to About Page</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>About Page</title>
+</head>
+<body>
+    <h1>Welcome to About Page</h1>
+</body>
+</html>
